--- a/styles/architects.css
+++ b/styles/architects.css
@@ -6,3 +6,72 @@
     font-weight: 400;
     font-style: normal;
   }
+  /* Shared style */
+.display-flex{
+  display: flex;
+}
+/* Dark 02 */
+.text-grey{
+  color: #424242;
+}
+
+/* Dark 03 */
+.text-light-grey{
+  color: #727272;
+}
+
+.bg-light{
+  background-color: rgba(255, 144, 14, 0.1);
+}
+
+.btn-primary{
+  background-color: #FF900E;
+  color: #FFFFFF;
+  padding: 20px 21px;
+  font-size: 1.25rem;
+  font-weight: 600;
+  border-radius: 8px;
+  border-style: none;
+  margin-bottom: 50px;
+}
+.navbar{
+  justify-content: space-between;
+  align-items: center;
+}
+.brand{
+  font-weight: 700;
+  font-size: 3rem;
+}
+/* navbar style */
+.nav-items{
+  list-style: none;
+  margin-right: 30px;
+}
+.nav-item{
+  text-decoration: none;
+  font-weight: 500;
+}
+
+.navbar, .banner{
+  max-width: 1440px;
+  margin: 0 auto;
+}
+/* banner related style */
+.banner-content{
+  max-width: 850px;
+  margin: 0 auto;
+  text-align: center;
+}
+.banner-title{
+  font-weight: 700;
+  font-size: 4rem;
+}
+.banner-image{
+  width: 100%;
+}
+/* responsive media query */
+@media screen and (max-width: 576px) {
+  .navbar, .nav-links{
+    flex-direction: column;
+  }
+}
