--- a/styles/architects.css
+++ b/styles/architects.css
@@ -10,6 +10,9 @@
 .display-flex{
   display: flex;
 }
+.text-primary{
+  color: #FF900E;
+}
 /* Dark 02 */
 .text-grey{
   color: #424242;
@@ -33,6 +36,21 @@
   border-radius: 8px;
   border-style: none;
   margin-bottom: 50px;
+}
+
+.section-title{
+  font-size: 2.8rem;
+  font-weight: 700;
+}
+/* Main part */
+main > section{
+  margin-top: 130px;
+}
+
+
+main{
+  max-width: 1440px;
+  margin: 0 auto;
 }
 .navbar{
   justify-content: space-between;
@@ -69,9 +87,42 @@
 .banner-image{
   width: 100%;
 }
+
+/* team and feature related style */
+.teams{
+  align-items: center;
+}
+.team-image-container{
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 24px;
+}
+.our-features{
+  margin-left: 130px;
+  max-width: 530px;
+}
+
+#quick-list{
+  font-weight: 500;
+}
 /* responsive media query */
 @media screen and (max-width: 576px) {
-  .navbar, .nav-links{
+  .navbar, .nav-links, .teams{
     flex-direction: column;
+  }
+  .team-image-container{
+    grid-template-columns: repeat(1, 1fr);
+  }
+  .our-features{
+    margin-left: 20px;
+  }
+}
+/* mediam size device */
+@media screen and (min-width:576px) and (max-width: 992px) {
+  .teams{
+    flex-direction: column;
+  }
+  .our-features{
+    margin-left: 0 auto;
   }
 }
